--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <h1>Event</h1>
         </div>
-        <div id="calender">
+        <div id="calendar">
             
         </div>
     </div>
