updated the html file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Event</h1>
-        </div>
+        <header>
+            <button class="navigation" onclick="previousMonth()">&lt;</button>
+            <h1 id="month"></h1>
+            <button class="navigation" onclick="nextMonth()">&gt;</button>
+        </header>
         <div id="calendar">
             
         </div>
